# nightreign-overlay-helper

./: .gitignore  GOLANG_PROGRESS.md  README.md  build.bat  config.yaml  go.mod  main.py  manual.txt  pyproject.toml
.github/workflows/: build.yml  release.yml
cmd/app/: main.go
data/: crystal.yaml
data/csv/: constructs.csv  map_patterns.csv  names.csv  positions.csv
internal/config/: config.go  loader.go
internal/logger/: logger.go
pkg/utils/: path.go  time.go  yaml.go
pkg/version/: version.go
scripts/: ci_version.py
src/: common.py  config.py  logger.py  updater.py
src/detector/: __init__.py  art_detector.py  day_detector.py  hp_detector.py  map_detector.py  map_info.py  rain_detector.py  utils.py
src/ui/: bug_report.py  hp_overlay.py  input.py  map_overlay.py  overlay.py  screenshot.py  settings.py  utils.py
