[project]
name = "nightreign-overlay-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.1.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyqt6>=6.9.1",
    "pywin32>=311",
    "pyyaml>=6.0.2",
]
